Fix word wrapping issues

--- a/sass/_include/base.scss
+++ b/sass/_include/base.scss
@@ -48,6 +48,7 @@ body {
 
     line-height: 1.4;
     font-family: 'OpenSans', sans-serif;
+    overflow-wrap: break-word;
     background-color: #fff;
     color: var(--flipdot-black);
 }
